Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111509

WASM: recent accessibility work breaks -no-feature-accessibility build

XMLWordPrintable

    • WebAssembly
    • 3c23d701a (dev), ae947a2cf (6.5)

      Most likely things aren't #ifdef'd with the correct feature macro

      FAILED: qtbase/src/plugins/platforms/wasm/CMakeFiles/QWasmIntegrationPlugin.dir/qwasmaccessibility.cpp.o 
      /opt/ossia-sdk-wasm/emsdk/upstream/emscripten/em++ -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_UP_TO=0x050000 -DQT_EGL_NO_X11 -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_GUI_LIB -DQT_HAVE_EMSCRIPTEN_ASYNCIFY -DQT_LEAN_HEADERS=1 -DQT_NO_AS_CONST=1 -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_NO_FOREACH -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_OPENGL_LIB -DQT_PLUGIN -DQT_STATICPLUGIN -DQT_STRICT_QLIST_ITERATORS -DQT_WARN_DEPRECATED_UP_TO=0x070000 -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -I/home/jcelerier/libs/build-qt6.5-wasm/qtbase/src/plugins/platforms/wasm/QWasmIntegrationPlugin_autogen/include -I/home/jcelerier/libs/qt5/qtbase/src/plugins/platforms/wasm -I/home/jcelerier/libs/build-qt6.5-wasm/qtbase/src/plugins/platforms/wasm -I/home/jcelerier/libs/build-qt6.5-wasm/qtbase/include -I/home/jcelerier/libs/build-qt6.5-wasm/qtbase/include/QtCore -I/home/jcelerier/libs/build-qt6.5-wasm/qtbase/mkspecs/wasm-emscripten -I/home/jcelerier/libs/build-qt6.5-wasm/qtbase/src/corelib -I/home/jcelerier/libs/build-qt6.5-wasm/qtbase/include/QtCore/6.5.0 -I/home/jcelerier/libs/build-qt6.5-wasm/qtbase/include/QtCore/6.5.0/QtCore -I/home/jcelerier/libs/build-qt6.5-wasm/qtbase/include/QtGui -I/home/jcelerier/libs/build-qt6.5-wasm/qtbase/src/gui -I/home/jcelerier/libs/build-qt6.5-wasm/qtbase/include/QtGui/6.5.0 -I/home/jcelerier/libs/build-qt6.5-wasm/qtbase/include/QtGui/6.5.0/QtGui -I/home/jcelerier/libs/build-qt6.5-wasm/qtbase/include/QtOpenGL -I/home/jcelerier/libs/build-qt6.5-wasm/qtbase/src/opengl -I/home/jcelerier/libs/build-qt6.5-wasm/qtbase/include/QtOpenGL/6.5.0 -I/home/jcelerier/libs/build-qt6.5-wasm/qtbase/include/QtOpenGL/6.5.0/QtOpenGL -g -DNDEBUG -O2 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -fno-exceptions -msimd128 -std=c++17 -Winvalid-pch -Xclang -include-pch -Xclang /home/jcelerier/libs/build-qt6.5-wasm/qtbase/src/plugins/platforms/wasm/CMakeFiles/QWasmIntegrationPlugin.dir/cmake_pch.hxx.pch -Xclang -include -Xclang /home/jcelerier/libs/build-qt6.5-wasm/qtbase/src/plugins/platforms/wasm/CMakeFiles/QWasmIntegrationPlugin.dir/cmake_pch.hxx -MD -MT qtbase/src/plugins/platforms/wasm/CMakeFiles/QWasmIntegrationPlugin.dir/qwasmaccessibility.cpp.o -MF qtbase/src/plugins/platforms/wasm/CMakeFiles/QWasmIntegrationPlugin.dir/qwasmaccessibility.cpp.o.d -o qtbase/src/plugins/platforms/wasm/CMakeFiles/QWasmIntegrationPlugin.dir/qwasmaccessibility.cpp.o -c /home/jcelerier/libs/qt5/qtbase/src/plugins/platforms/wasm/qwasmaccessibility.cpp
      In file included from /home/jcelerier/libs/qt5/qtbase/src/plugins/platforms/wasm/qwasmaccessibility.cpp:4:
      /home/jcelerier/libs/qt5/qtbase/src/plugins/platforms/wasm/qwasmaccessibility.h:19:35: error: unknown class name 'QPlatformAccessibility'; did you mean 'QWasmAccessibility'?
      class QWasmAccessibility : public QPlatformAccessibility
                                        ^~~~~~~~~~~~~~~~~~~~~~
                                        QWasmAccessibility
      /home/jcelerier/libs/qt5/qtbase/src/plugins/platforms/wasm/qwasmaccessibility.h:19:7: note: 'QWasmAccessibility' declared here
      class QWasmAccessibility : public QPlatformAccessibility
            ^
      
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sorvig Morten Sørvig
            jcelerier Jean-Michaël Celerier
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes