wasm: build with -no-feature-accessibility

Add #ifdefs around the accessibility implementation.

Fixes: QTBUG-111509
Change-Id: I9a600781b4bf9545f046efa75f962cc40fe196a6
Reviewed-by: Mikołaj Boc <Mikolaj.Boc@qt.io>
(cherry picked from commit 3c23d701a777522e96e210e5836bc5803a951d77)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>